--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,8 +1,14 @@
 .loader-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.7); /* Optional semi-transparent background */
+  z-index: 9999;
   }
   
   .loader {
